Adding support for relative file references